# Agent-Memory

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  COOKBOOKS.md  Cargo.toml  DEMOS.md  Dockerfile  EXAMPLE.md  HOW_TO_EDIT.md  IMPORT.md  KNOWLEDGE.md  LEARNING.md  LICENSE  README.md  SEARCH.md  agent.py  agent_langchain.py  agent_langgraph.py  agent_pydantic.py  courses.md  demo.py  docker-compose.yml  index.html  load.py  netlify.toml  pyproject.toml  search_skills.py  surrealkit.toml
.cursor/rules/: surrealdb.md
.github/workflows/: ci.yml  npm.yml  pages.yml  python.yml  release.yml
agent-memory-node/: Cargo.toml  index.d.ts  index.js  package.json
agent-memory-node/src/: lib.rs
agent-memory-python/: Cargo.toml  pyproject.toml
agent-memory-python/src/: lib.rs
benchmarks/: README.md
benchmarks/memory/fixtures/conversations/: CS-01-customer-support.json  ENG-01-engineering.json  ENG-02-engineering.json  PA-01-personal-assistant.json  PA-02-personal-assistant.json  PA-03-personal-assistant.json  PM-01-project-management.json  PM-02-project-management.json  RS-01-research.json
benchmarks/memory/fixtures/queries/: identity-recall.json
benchmarks/results/: TEMPLATE.md
components/: README.md  ai_agent.py  api_server.py  auth.py  etl_pipeline.py  frontend.py  gaming.py  healthcare.py  knowledge_graph.py  workflow.py
config/: default.toml
courses/01-querying-fundamentals/: README.md  assignment.md
courses/02-advanced-querying/: README.md
docs/: index.html  landing-page.md  platform-agent-integration.md
docs/blog/: memory-is-not-a-database-problem.md
docs/whitepaper/: agent-memory-whitepaper.docx
examples/: benchmark.rs
frameworks/: README.md  llm_config.py  pydantic_agent.py  storage_config.py
knowledge/: surrealdb-complete.md  trust-centre.md  use-cases.md
migrations/: 001_memory.surql  002_human_memory.surql  003_conflict.surql
plugins/: README.md  airbyte.py  data_quality.py  embeddings.py  n8n.py  reactive.py  realtime.py
prompts/: system.md
samples/: README.md  agent_template.py  agents.py  agno_agent.py  analytics_agent.py  blink_app.md  blueprints.py  chunking_agent.py  configurable_agent.py  digital_twin_agent.py  ecommerce_agent.py  finance_agent.py  graphrag_agent.py  healthcare_agent.py  hybrid_search_agent.py  kaig_agent.md  kaig_style.py  knowledge_graph_agent.py  knowledge_lake_agent.py  monitoring_agent.py  multi_capability_agent.py  rag_agent.py  support_agent.py  surrealql_native.py  voice_agent.py
schemas/surrealdb/: memory.surql
scripts/: build-dmg.sh
skills/: README.md  admin.md  data-models.md  javascript.md  official.md  python.md  query.md  registry.md  surrealql.md  vector-search.md
src/: config.rs  lib.rs  main.rs
src/agent_memory/: __init__.py  browser.ts  chat.py  client.py  config.py  faq_bot.py  learn_platform.py  models.py  orchestrator.py  types.py
src/agent_memory/backends/surrealdb/: __init__.py  client.py
src/agent_memory/services/: __init__.py  memory_service.py
src/analytics/: engine.rs
src/mcp/: server.rs
src/memory/: conflict.rs  decay.rs  gap.rs  mod.rs  service.rs  service_gap.rs  store.rs  store_gap.rs  types.rs
src/server/: mod.rs
src/services/: cortex.rs  evolution.rs  mod.rs
src/telemetry/: engine.rs
src/tools/: rest_api.py
surql/: 01-schema.surql  02-ingest.surql  03-queries.surql  03-query.surql  04-ml.surql
tests/: schema.test.surql  test_smoke.py
tools/: README.md  fulltext_search.py  functions.py  knowledge_graph.py  live_queries.py  rpc.py  streaming.py  surrealdb_tools.py  vector_search.py
ui/: blueprint-editor.html  index.html  learn-platform.html
website/: README.md  index.html  styles.css
