[package]
name        = "agent-memory"
version     = "0.1.0"
edition     = "2021"
description = "Open memory layer for AI agents — embedded SurrealDB, Ebbinghaus decay, episodic replay, conflict resolution"
license     = "Apache-2.0"
repository  = "https://github.com/AGenNext/Agent-Memory"
homepage    = "https://github.com/AGenNext/Agent-Memory"
documentation = "https://docs.rs/agent-memory"
keywords    = ["ai", "agent", "memory", "mcp", "surrealdb"]
categories  = ["database", "asynchronous"]
readme      = "README.md"
exclude     = ["schemas/", "*.md"]

[lib]
name = "agent_memory"
path = "src/lib.rs"

[[bin]]
name = "agent-memory"
path = "src/main.rs"

[dependencies]
# SurrealDB embedded engine — the entire DB runs in-process, no network
surrealdb   = { version = "3.1.2", features = ["kv-rocksdb", "kv-mem"] }

# Async runtime
tokio       = { version = "1.52.3", features = ["full"] }

# MCP server — Model Context Protocol (optional feature)
rmcp        = { version = "1.7.0", features = ["server", "transport-io"], optional = true }

# Serialisation
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = { version = "1.0.150" }
toml        = { version = "1.1.2", features = ["preserve_order"] }

# Error handling
anyhow      = { version = "1.0.102" }
thiserror   = { version = "2.0.18" }

# Observability
tracing             = { version = "0.1.44" }
tracing-subscriber  = { version = "0.3.23", features = ["env-filter", "json"] }

# Types
uuid        = { version = "1.23.2", features = ["v4", "serde"] }
chrono      = { version = "0.4.44", features = ["serde"] }

# HTTP health check (for SurrealDB server mode — optional)
reqwest     = { version = "0.13.4", features = ["json"], default-features = false, optional = true }

# CLI / config
clap        = { version = "4", features = ["derive", "env"] }
dirs        = { version = "6" }

[features]
default = []
# Enable SurrealDB HTTP server mode (requires surreal binary in PATH)
server-mode = ["reqwest"]
# Enable MCP server
mcp = ["rmcp"]

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
