[project]
name = "agent-memory"
version = "0.2.0"
description = "AGenNext production memory SDK — Spectron model on SurrealDB"
requires-python = ">=3.11"
dependencies = [
  "surrealdb>=1.0.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"
