[package]
name        = "agent-memory-node"
version     = "0.1.0"
edition     = "2021"
description = "Node.js bindings for agent-memory — embedded AI agent memory layer"
license     = "Apache-2.0"
repository  = "https://github.com/AGenNext/Agent-Memory"

[lib]
crate-type = ["cdylib"]

# Dependency versions pinned exactly (`=x.y.z`) for reproducible builds.
[dependencies]
agent-memory = { path = "..", default-features = false }
napi         = { version = "=3.9.0", features = ["async", "tokio_rt", "napi4"] }
napi-derive  = { version = "=3.5.6" }
tokio        = { version = "=1.52.3", features = ["full"] }
serde_json   = { version = "=1.0.150" }

[build-dependencies]
napi-build = { version = "=2.3.2" }

[profile.release]
lto           = true
strip         = true
opt-level     = 3
codegen-units = 1
panic         = "abort"
