[package]
name        = "agent-memory-python"
version     = "0.1.0"
edition     = "2021"
description = "Python bindings for agent-memory"
license     = "Apache-2.0"
repository  = "https://github.com/AGenNext/Agent-Memory"

[lib]
name      = "agent_memory"
crate-type = ["cdylib"]

[dependencies]
agent-memory = { path = "..", default-features = false }
pyo3         = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.22", features = ["tokio-runtime"] }
tokio        = { version = "1.52.3", features = ["full"] }
serde_json   = { version = "1.0.150" }

[build-dependencies]
pyo3-build-config = "0.22"
