[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name            = "agent-memory"
version         = "0.1.0"
description     = "Embedded AI agent memory layer — Ebbinghaus decay, episodic replay, conflict resolution"
readme          = "../README.md"
license         = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords        = ["ai", "agent", "memory", "langchain", "llm", "crewai"]
classifiers     = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage   = "https://github.com/AGenNext/Agent-Memory"
Repository = "https://github.com/AGenNext/Agent-Memory"

[tool.maturin]
features      = ["pyo3/extension-module"]
module-name   = "agent_memory._core"
python-source = "python"
